syntax = "proto3";

option go_package = "gen/pb";

package myapp;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Todo {
  int64 id = 1;
  string title = 2;
  bool completed = 3;
  google.protobuf.Timestamp created_at = 900;
  google.protobuf.Timestamp updated_at = 901;
}

message CreateTodoRequest {
  string title = 1;
}

message CreateTodoReply {
  bool ok = 1;
}

message ListTodosReply {
  repeated Todo todos = 1;
}

message CompleteTodoRequest {
  int64 id = 1;
}

message CompleteTodoReply {
  bool ok = 1;
}

message DeleteTodoRequest {
  int64 id = 1;
}

message DeleteTodoReply {
  bool ok = 1;
}

service TodoService {
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoReply);
  rpc ListTodos(google.protobuf.Empty) returns (ListTodosReply);
  rpc CompleteTodo(CompleteTodoRequest) returns (CompleteTodoReply);
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoReply);
}
